Full Copy Scene produce Orphan Data objects #71798

Closed
opened 2019-11-23 01:52:07 +01:00 by Maciej Jutrzenka · 12 comments

System Information
Operating system: Linux-4.15.0-70-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: GeForce 610M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.116

Blender Version
Broken: version: 2.81 (sub 16), branch: master, commit date: 2019-11-20 14:27, hash: 26bd5ebd42
Worked: (optional)

Short description of errortest.blend
i was working on some big animation multiplate takes but because of NDA i can't uploud the full file however after deleateing all stuff from file.. and just adding cube and makeing full copy of scene with single cube the issiue happens. The file is broken.. a fresh new file works fine. i am not sure what made this file to sudenly not work correctly.

Exact steps for others to reproduce the error
make FULL COPY of scene. and as u will see all items in it will have user count 0 and will apear as ophran data.

EDIT//
I it seams that the automatic Scene collection that is created on each new scene.. is loosing links.

**System Information** Operating system: Linux-4.15.0-70-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: GeForce 610M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.116 **Blender Version** Broken: version: 2.81 (sub 16), branch: master, commit date: 2019-11-20 14:27, hash: `26bd5ebd42` Worked: (optional) **Short description of error**[test.blend](https://archive.blender.org/developer/F8157099/test.blend) i was working on some big animation multiplate takes but because of NDA i can't uploud the full file however after deleateing all stuff from file.. and just adding cube and makeing full copy of scene with single cube the issiue happens. The file is broken.. a fresh new file works fine. i am not sure what made this file to sudenly not work correctly. **Exact steps for others to reproduce the error** make FULL COPY of scene. and as u will see all items in it will have user count 0 and will apear as ophran data. EDIT// I it seams that the automatic Scene collection that is created on each new scene.. is loosing links.

Added subscriber: @MaciejJutrzenka

Added subscriber: @MaciejJutrzenka

Added subscriber: @Stan_Pancakes

Added subscriber: @Stan_Pancakes

Just made full copy of the default scene in 2.81. No new orphan data appeared.

Just made full copy of the default scene in 2.81. No new orphan data appeared.

@Stan_Pancakes yes the default works fine. try on the file i have attached. read description

@Stan_Pancakes yes the default works fine. try on the file i have attached. read description

SOLVER: U have to make new collection and put all objects in to it. before doing full copy of TAKE_2. Is this kind of a bug? or just strange design workflow case.

SOLVER: U have to make new collection and put all objects in to it. before doing full copy of TAKE_2. Is this kind of a bug? or just strange design workflow case.

Yes, thanks for the clarification. Looks like objects in 'Scene Collection' indeed lose both links. 2.80 seems to behave correctly.

Yes, thanks for the clarification. Looks like objects in 'Scene Collection' indeed lose both links. 2.80 seems to behave correctly.
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

full-copy-bug.blend

Steps to reproduce a crash:

  1. Open file.
  2. Do a full copy of the scene.
  3. Delete the cube in the new scene.

This crashes, because the cube has zero users, while the cube in the old scene now has two users.

[full-copy-bug.blend](https://archive.blender.org/developer/F8265971/full-copy-bug.blend) Steps to reproduce a crash: 1. Open file. 2. Do a full copy of the scene. 3. Delete the cube in the new scene. This crashes, because the cube has zero users, while the cube in the old scene now has two users.
Bastien Montagne self-assigned this 2020-01-13 21:38:20 +01:00

that’s yet another glorious demonstration of how much of a pain those 'IDs that are not really IDs' (the master collection here) are in current Blender… will check on how to fix that bug…

that’s yet another glorious demonstration of how much of a pain those 'IDs that are not really IDs' (the master collection here) are in current Blender… will check on how to fix that bug…

This issue was referenced by ac723db57f

This issue was referenced by ac723db57fd8ba5493088b135ef7c910be4ca2ff

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#71798
No description provided.